[fix] hide scrollbar in mobile view

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,3 +12,11 @@
 }
 
 
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, and Opera */
+}
